fix: matjax overflow problem

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1423,3 +1423,7 @@ figure.cover {
     color: #23212d !important;
   }
 }
+
+mjx-container[jax="CHTML"][display="true"] {
+  overflow-x: auto;
+}
